# graph-diffusion-edge-serving

./: .dockerignore  API_REFERENCE.md  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_EXECUTION_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.prod  Dockerfile.tpu  FINAL_AUTONOMOUS_SDLC_REPORT.md  GENERATION_4_QUANTUM_COMPLETION_REPORT.md  PERFORMANCE_OPTIMIZATION.md  PRODUCTION_DEPLOYMENT.md  README.md  RESEARCH_PAPER.md  USAGE.md  config.prod.toml  config.quantum.toml  config.toml  docker-compose.prod.yml  docker-compose.quantum.yml  docker-compose.yml  k8s-deployment.yaml
benches/: graph_processing.rs  serving_latency.rs
benchmarks/: performance_report.md
examples/: autonomous_demo.rs  autonomous_sdlc_demo.rs  autonomous_sdlc_execution_demo.rs  basic_demo.rs  comprehensive_research_validation.rs  final_autonomous_demonstration.rs  final_demo.rs  generation1_demo.rs  generation1_enhanced_demo.rs  generation2_robust_demo.rs  generation3_demo.rs  generation3_scalable_demo.rs  generation4_quantum_demo.rs  performance_demo.rs  production_deployment_demo.rs  quality_gates_demo.rs  research_demonstration.rs  resilience_demo.rs  robust_demo.rs  scaling_demo.rs  wasm_demo.html
monitoring/: prometheus.yml
scripts/: build.sh  deploy.sh  test.sh
src/: adaptive_neural_architecture_search.rs  adaptive_optimization_engine.rs  adaptive_resilience.rs  ai_driven_global_orchestration.rs  autonomous_executor.rs  autonomous_quality_gates.rs  autonomous_quantum_engine.rs  autonomous_sdlc_executor.rs  comprehensive_quality_gates.rs  distributed_processing.rs  enhanced_global_deployment.rs  enhanced_monitoring.rs  enhanced_security.rs  evolutionary_system_optimizer.rs  global_deployment.rs  health_monitor.rs  high_performance_distributed_engine.rs  intelligent_auto_scaling_system.rs  intelligent_error_recovery.rs  intelligent_health_monitoring.rs  intelligent_optimization.rs  lib.rs  minimal_server.rs  monitoring.rs  performance_optimizer.rs  production_deployment_orchestrator.rs  production_deployment_system.rs  progressive_quality.rs  quality_gates.rs  quantum_graph_transformer.rs  research_validation.rs  resilience.rs  resilience_orchestrator.rs  resilience_patterns.rs  robust_error_recovery_system.rs  scaling.rs  scaling_orchestrator.rs  security.rs  security_scanner.rs  self_modifying_code_generator.rs  (+1 more)
src/benchmarking/: mod.rs
src/core/: adaptive_diffusion.rs  dgdm.rs  diffusion.rs  graph.rs  mod.rs
src/optimization/: caching.rs  mod.rs  performance.rs  pruning.rs  quantization.rs  resource_pool.rs
src/serving/: circuit_breaker.rs  handlers.rs  health.rs  middleware.rs  mod.rs  resilient_server.rs  server.rs  streaming.rs
src/tpu/: compiler.rs  kernels.rs  mod.rs  runtime.rs  runtime_mock.rs
src/wasm/: client.rs  mod.rs  utils.rs
tests/: integration_test.rs  security_tests.rs
